--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
+  <meta name="author" content="Seweryn Kuliga & Gabriela Smolen" />
+  <meta name="description" content="App for determining gender by voice" />
 
   <title>Gender recognition</title>
 </head>
